--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>my second git repo</title>
 </head>
 <body>
-    
+    <h1>i can push github</h1>
+    <h2>i can code now</h2>
 </body>
 </html>
