--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my second git repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>i can push github</h1>
     <h2>i can code now</h2>
+    <h3>new code changed</h3>
+    <p>more paragraph</p>
+    <p>i am coding and coding and coding</p>
 </body>
 </html>
