--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <h3>new code changed</h3>
     <p>more paragraph</p>
     <p>i am coding and coding and coding</p>
+    <img src="nyc.jpg" alt="">
+    <img src="art.jpg" alt="">
 </body>
 </html>
