--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <p>i am coding and coding and coding</p>
     <img src="nyc.jpg" alt="">
     <img src="art.jpg" alt="">
+    <img src="mobile.jpg" alt="">
 </body>
 </html>
