--- a/index.html
+++ b/index.html
@@ -16,5 +16,10 @@
     <img src="nyc.jpg" alt="">
     <img src="art.jpg" alt="">
     <img src="mobile.jpg" alt="">
+    <div>
+        <p>look mammma, i can blogg</p>
+        <h3>new blogg</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus, sed, accusantium fugiat id eaque velit sit libero facere enim officiis, ratione possimus deleniti minus molestias voluptatibus. Consectetur veritatis iste sunt, unde eum quos dignissimos excepturi fugiat odio consequuntur nisi iusto! ipsum dolor sit amet consectetur adipisicing elit. Numquam, aliquid quaerat. Alias doloribus fugiat facilis totam voluptas quis id quidem delectus minima modi nemo fugit non, amet pariatur iste labore?</p>
+    </div>
 </body>
 </html>
